{
  "version": 4,
  "terraform_version": "1.7.0",
  "serial": 21,
  "lineage": "1b06f15a-a30f-42f9-aa67-62798428bb54",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:933229134445:vpc/vpc-0bf132fe29849be18",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0248a539b2f97d107",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-057fdf10c8edf2fed",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bf132fe29849be18",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0bbaac24aa1c25ef3",
            "owner_id": "933229134445"
          }
        }
      ]
    },
    {
      "module": "module.trw_instances_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:933229134445:security-group/sg-0cb7139995ef0c816",
            "description": "Security Group for frontend and backend instances",
            "egress": [],
            "id": "sg-0cb7139995ef0c816",
            "ingress": [],
            "name": "tr-web-staging-instances-sg-20240321124146160900000001",
            "name_prefix": "tr-web-staging-instances-sg-",
            "owner_id": "933229134445",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "staging",
              "Name": "tr-web-staging-instances-sg",
              "Project": "tr-web",
              "Resource": "security_group",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "tr-web-staging-instances-sg",
              "Project": "tr-web",
              "Resource": "security_group",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0bf132fe29849be18"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.trw_instances_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-555797416",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0cb7139995ef0c816",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default",
            "module.trw_instances_sg.aws_security_group.this",
            "module.trw_instances_sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.trw_instances_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-247263342",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0cb7139995ef0c816",
            "security_group_rule_id": "sgr-04aaa4bcf961b4907",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default",
            "module.trw_instances_sg.aws_security_group.this",
            "module.trw_instances_sg.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-3090591195",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0cb7139995ef0c816",
            "security_group_rule_id": "sgr-025cefd9c4f38f37c",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default",
            "module.trw_instances_sg.aws_security_group.this",
            "module.trw_instances_sg.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTPS",
            "from_port": 443,
            "id": "sgrule-1820858693",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0cb7139995ef0c816",
            "security_group_rule_id": "sgr-03b2863b9c8eb6d61",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default",
            "module.trw_instances_sg.aws_security_group.this",
            "module.trw_instances_sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.trw_web_ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b8b44ec9a8f90422",
            "arn": "arn:aws:ec2:us-east-2:933229134445:instance/i-0a42b6eeee4bc95b4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a42b6eeee4bc95b4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tr-web-staging-instances-kp-20240321124146189900000002",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-084d8cbecd992b5db",
            "private_dns": "ip-172-31-13-75.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.13.75",
            "public_dns": "ec2-3-15-22-97.us-east-2.compute.amazonaws.com",
            "public_ip": "3.15.22.97",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07ee2de290aadb724",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "tr-web-staging-instances-sg-20240321124146160900000001"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0274db99687f11ce5",
            "tags": {
              "Environment": "staging",
              "Name": "tr-web-staging-web-ec2",
              "Project": "tr-web",
              "Resource": "instance",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "tr-web-staging-web-ec2",
              "Project": "tr-web",
              "Resource": "instance",
              "Terraform": "true"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": true,
            "volume_tags": {
              "Name": "tr-web-staging-web-ec2"
            },
            "vpc_security_group_ids": [
              "sg-0cb7139995ef0c816"
            ]
          },
          "dependencies": [
            "data.aws_ami.ami_ubuntu",
            "data.aws_vpc.default",
            "data.template_file.user_data",
            "module.trw_instances_kp.aws_key_pair.this",
            "module.trw_instances_kp.tls_private_key.this",
            "module.trw_instances_sg.aws_security_group.this",
            "module.trw_instances_sg.aws_security_group.this_name_prefix",
            "module.trw_web_ec2.aws_iam_instance_profile.this",
            "module.trw_web_ec2.aws_iam_role.this",
            "module.trw_web_ec2.data.aws_iam_policy_document.assume_role_policy",
            "module.trw_web_ec2.data.aws_partition.current",
            "module.trw_web_ec2.data.aws_ssm_parameter.this"
          ]
        }
      ]
    }
  ]
}